--- a/public_html/html/0000_Empty_HTML_Page.html
+++ b/public_html/html/0000_Empty_HTML_Page.html
@@ -1,17 +1,28 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <!--
- * Title: 
- * Author: 
- * Additional Authors: 
- * Filename:
- * Description:
- * Version:
- * Date:
- * Last Modified:
- * Location_of_the_Video:
- * Meta_data_for_YouTube:
- * Web_Site_For_Video: 
+* Title: 
+* Author: 
+* Additional Authors: 
+* Filename: 
+* Description: 
+* Version: 
+* Date: 
+* Last Modified: 
+* Additional_Notes: 
+* Source: 
+* Additional_Sources: 
+* Credits: 
+* Additional Credits: 
+* Location_of_the_Video: 
+* Embed_YouTube: 
+* Website_For_Video: 
 -->
+
+<!--
+Add your license here. Here is a good list of licenses, that you can use:
+https://www.gnu.org/licenses/license-list.html
+-->
+
 <head>
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding"><meta charset="utf-8">
